fixed bug with horizontal scrolling when on mobile view due to background image

--- a/public/main.css
+++ b/public/main.css
@@ -7,6 +7,8 @@ body {
     padding: 0;
     background-color: #E7E6E1;
     font-family: 'Roboto', sans-serif;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 section {
